# Neural_Ledger_Project

./: .env.example  README.md  init_database.py  main.py  pyproject.toml
config/: settings.py
src/database/: init_db.py  schema.sql
src/phase1/: watcher.py
src/phase1/bronze/: bronze_writer.py
src/phase1/ingestion/: csv_parser.py  detector.py  excel_parser.py
src/phase1/schema_mapper/: dictionary.py  fuzzy_mapper.py  mapper.py  security.py
storage/: neural_ledger.db
tests/phase1/: test_bronze_writer.py  test_db_init.py  test_schema_mapper.py  test_watcher.py
