[project]
name = "neural-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=7.4.3",
    "duckdb>=1.5.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]
